For more information, check the README.md in http://github.com/i3visio/osrframework

[Known issues]
- Text to deep web search is broken.
- Recursive expansion of attributes when the cap is reached.
- Update the Skype4py package to try to make it work in new versions of Skype in Windows.

[TO-DO] 
- Generation of aliases from a person.
- Inclusion of a call to pipl.com API.
- Creation of different transforms for each and every platform in usufy.
- Migration from old usufy platforms to newest approach used in phonefy.
- Inclusion of new usufy platforms which are now in testing mode.
- Update transforms using the old -launchers.
- Move external api calls to the main folder.

v0.9.0, 2015/04/** -- Major restructuration of the internal tool.
- Moved platforms to wrappers and changed platforms.py to utils.
- Inclusion of regular expression rules to choose valid names.
- Inclusion of all the variables to include phonefy, usufy and searchfy search in all platforms.
- Removed phonefy and usufy folders for structural simplicity.
- Changed usufy-launcher.py and phonefy-launcher.py to usufy.py and phonefy.py.
- Changed maltfy folder to transforms.
- Opening .onion URI using onion.cab service.
- Updated transforms to match the new distribution.

v0.8.3, 2015/04/09 -- Changed the structure of the returned csv files.
- Adding the possibility of creating a csv output file.

v0.8.2, 2015/04/08 -- Changed the structure of the returned json files.
- Fixed an issue that created up to n different json files.
- The returned json is a list of i3visio.objects and the list returned is now ordered and no longer linked to the nickname searched.

v0.8.1, 2015/04/08 -- Minor fixes on certain platforms which were not working.
- Fixed the self.notFoundText in: cafemom, pearltreesspoj.
- Added the self.foundText in: spoj.
- ResearchGate needs credential now.

v0.8.0, 2015/04/03 -- Improvements in the entity generation and an extensive ip-api.com support.