@@ -21,17 +21,17 @@
 ##################################################################################
 
 ''' 
-phonefy.py Copyright (C) F. Brezo and Y. Rubio (i3visio) 2015
+searchfy.py Copyright (C) F. Brezo and Y. Rubio (i3visio) 2015
 This program comes with ABSOLUTELY NO WARRANTY.
 This is free software, and you are welcome to redistribute it under certain conditions.
 For details, run:
-    python phonefy.py --license
+    python searchfy.py --license
 '''
 __author__ = "Felix Brezo, Yaiza Rubio "
 __copyright__ = "Copyright 2015, i3visio"
 __credits__ = ["Felix Brezo", "Yaiza Rubio"]
 __license__ = "GPLv3+"
-__version__ = "v1.0.0b"
+__version__ = "v0.1.0"
 __maintainer__ = "Felix Brezo, Yaiza Rubio"
 __email__ = "contacto@i3visio.com"
 
@@ -42,34 +42,36 @@ import json
 import osrframework.utils.platform_selection as platform_selection
 
 
-def processPhoneList(platformNames=[], numbers=[]):
+def performSearch(platformNames=[], queries=[]):
     ''' 
         Method to perform the phone list.
         
-        :param platformNames: List of names fr the platforms.
-        :param numbers: List of numbers to be queried.
+        :param platforms: List of <Platform> objects.
+        :param queries: List of queries to be performed.
         
         :return:
     '''
     # Grabbing the <Platform> objects
-    platforms = platform_selection.getPlatformsByName(platformNames, mode="phonefy")    
+    platforms = platform_selection.getPlatformsByName(platformNames, mode="searchfy")    
     
     results = []
-    for num in numbers:
+    for q in queries:
         for pla in platforms:
             # This returns a json.txt!
-            entities = pla.getInfo(query=num, process = True, mode="phonefy")
+            entities = pla.getInfo(query=q, process = True, mode="searchfy")
             if entities != {}:
                 results.append(json.loads(entities))
     return results
 
-def phonefy_main(args):
+def searchfy_main(args):
     ''' 
         Main program.
         
-        :param args: Arguments received by parameter
+        :param args: Arguments received in the command line.
     '''
-    results = processPhoneList(platformNames=args.platforms, numbers=args.numbers)
+
+    
+    results = performSearch(platformNames=args.platforms, queries=args.queries)
 
     # Printing the results
     if not args.quiet:
@@ -81,19 +83,19 @@ def phonefy_main(args):
             oF.write(json.dumps(results, indent=2) )
 
 if __name__ == "__main__":
-    parser = argparse.ArgumentParser(description='phonefy.py - Piece of software that checks the existence of a given series of phones in a bunch of phone number lists associated to malicious activities.', prog='phonefy.py', epilog='Check the README.md file for further details on the usage of this program.', add_help=False)
+    parser = argparse.ArgumentParser(description='searchfy.py - Piece of software that performs a query on the platforms in OSRFramework.', prog='searchfy.py', epilog='Check the README.md file for further details on the usage of this program.', add_help=False)
     parser._optionals.title = "Input options (one required)"
 
     # Defining the mutually exclusive group for the main options
     general = parser.add_mutually_exclusive_group(required=True)
     # Adding the main options
     general.add_argument('--license', required=False, action='store_true', default=False, help='shows the GPLv3+ license and exists.')    
-    general.add_argument('-n', '--numbers', metavar='<phones>', nargs='+', action='store', help = 'the list of phones to process (at least one is required).')
+    general.add_argument('-q', '--queries', metavar='<searches>', nargs='+', action='store', help = 'the list of queries to be performed).')
 
-    listAll = platform_selection.getAllPlatformNames("phonefy")
+    listAll = platform_selection.getAllPlatformNames("searchfy")
 
     # Configuring the processing options
-    groupProcessing = parser.add_argument_group('Processing arguments', 'Configuring the way in which usufy will process the identified profiles.')
+    groupProcessing = parser.add_argument_group('Processing arguments', 'Configuring the way in which searchfy will process the identified profiles.')
     #groupProcessing.add_argument('-L', '--logfolder', metavar='<path_to_log_folder', required=False, default = './logs', action='store', help='path to the log folder. If none was provided, ./logs is assumed.')        
     groupProcessing.add_argument('-o', '--output_file',  metavar='<path_to_output_file>',  action='store', help='path to the output file where the results will be stored in json format.', required=False)
     groupProcessing.add_argument('-p', '--platforms', metavar='<platform>', choices=listAll, nargs='+', required=False, default =['all'] ,action='store', help='select the platforms where you want to perform the search amongst the following: ' + str(listAll) + '. More than one option can be selected.')    
@@ -108,4 +110,4 @@ if __name__ == "__main__":
     args = parser.parse_args()    
 
     # Calling the main function
-    phonefy_main(args)
+    searchfy_main(args)
