@@ -6,9 +6,12 @@ For more information, check the README.md in http://github.com/i3visio/osrframew
 - Update the Skype4py package to try to make it work in new versions of Skype in Windows.
 
 [TO-DO] 
+- Usage of mashape.com API linked to email verification.
+- Usage of mashape.com API linked to image verification.
+- Inclusions of email verification transforms.
+- Inclusions of searchfy transforms.
 - Generation of aliases from a person.
 - Inclusion of a call to pipl.com API.
-- Creation of different transforms for each and every platform in usufy.
 - Migration from old usufy platforms to newest approach used in phonefy.
 - Inclusion of new usufy platforms which are now in testing mode.
 - Update transforms using the old -launchers.
@@ -17,6 +20,8 @@ For more information, check the README.md in http://github.com/i3visio/osrframew
 v0.9.0, 2015/04/** -- Major restructuration of the internal tool.
 - Moved platforms to wrappers and changed platforms.py to utils.
 - Inclusion of regular expression rules to choose valid names.
+- Inclusion of a new mailfy.py app that verifies whether an email is known as a valid email using emailahoy.
+- Inclusion of a new searchfy.py app that recovers the URL of a search in different platforms.
 - Inclusion of all the variables to include phonefy, usufy and searchfy search in all platforms.
 - Removed phonefy and usufy folders for structural simplicity.
 - Changed usufy-launcher.py and phonefy-launcher.py to usufy.py and phonefy.py.
